--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 云坤的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: yunkunliao@gmail.com
 description: "Every failure is leading towards success."
-#keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+#keyword: "“
 url: "http://liaoyunkun.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/liaoyunkun/liaoyunkun.github.io.git" # you code repository
@@ -12,18 +12,18 @@ github_repo: "https://github.com/liaoyunkun/liaoyunkun.github.io.git" # you code
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/about-me.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
+# weibo_username:   
 zhihu_username:     云坤
 github_username:    liaoyunkun
-#facebook_username:  baiying.qiu.7
-#jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+#facebook_username:  
+#jianshu_username:   
+#twitter_username:   
 
 
 
@@ -101,14 +101,4 @@ service-worker: true
     #{
         #title: "WY",
         #href: "http://zhengwuyang.com"
-    #},{
-        #title: "简书·BY",
-        #href: "http://www.jianshu.com/u/e71990ada2fd"
-    #},{
-        #title: "Apple",
-        #href: "https://apple.com"
-    #},{
-        #title: "Apple Developer",
-        #href: "https://developer.apple.com/"
-    #}
 #]
