--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/about_me.png      # use absolute URL, seeing it's used in b
 # SNS settings
 RSS: false
 # weibo_username:   
-zhihu_username:     云坤
+zhihu_username:     liao-yun-kun
 github_username:    liaoyunkun
 #facebook_username:  
 #jianshu_username:   
