--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: BY Blog
-SEOTitle: 云坤的博客 | BY Blog
-header-img: img/post-bg-desk.jpg
+SEOTitle: 云坤的博客
+header-img: img/inter.jpg
 email: yunkunliao@gmail.com
 description: "Every failure is leading towards success."
 #keyword: "“
