--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/inter2.jpg
 email: yunkunliao@gmail.com
 description: "Every failure is leading towards success."
 #keyword: "“
-url: "http://liaoyunkun.github.io"          # your host, for absolute URL
+url: "http://Jakieyewang.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/liaoyunkun/liaoyunkun.github.io.git" # you code repository
+github_repo: "https://github.com/liaoyunkun/Jakieyewang.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
